# texting

./: .gitignore  Makefile  README  aclocal.m4  configure.ac
doc/: regexp.txt
src/: Makefile.am  common.h  main.cc  symbol.txt  test.make  unicode.cc  unicode.h  unit.txt  zpcre.cc  zpcre.h  zscws.cc  zscws.h  zstmt.cc  zstmt.h  zstring.cc  zstring.h  zstrip.cc  zstrip.h  zterm.h  ztexting.cc  ztexting.h  ztype.h  zutils.cc  zutils.h
test/: Makefile.am  test.yml  test_ztexting_init.yml  unicode_test.cc  zpcre_test.cc  zscws_test.cc  zstmt_test.cc  zstring_regexp_test.cc  zstring_test.cc  zstrip_test.cc  ztexting_test.cc  ztexting_test2.cc  zutils_test.cc
test/.deps/: zstring_test-zstring_test.Po  zstring_test.Po
test/test_data/: dict.short.xdb  en.txt  symbol.txt  term.txt
